	PR c++/11530 	* parser.c (cp_parser_postfix_expression): Do not call mark_used. 	* semantics.c (finish_id_expression): Call mark_used for all 	declarations.

PR c++/11530
	* g++.dg/opt/call1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69911 138bc75d-0d04-0410-961f-82ee72b054a4