gcc/testsuite/g++.dg/opt/call1.C
@@ -1,0 +1,21 @@
+// { dg-options "-O2" }
+
+void a (void (*f)())
+{
+  f();
+}
+
+struct RunState
+{
+  static void runcallback() { }
+  static void wait()
+  {
+    a (runcallback);
+  }
+};
+
+int main()
+{
+  RunState::wait();
+  return 0;
+}
